full datos version 0.1

--- a/Code/Laravel/public/assets/js/jquery-ui.css
+++ b/Code/Laravel/public/assets/js/jquery-ui.css
@@ -200,10 +200,33 @@
 	overflow: auto;
 }
 .ui-autocomplete {
-	position: absolute;
-	top: 0;
-	left: 0;
-	cursor: default;
+  position: fixed;
+  top: 100%;
+  left: 0;
+  z-index: 1051 !important;
+  float: left;
+  display: none;
+  min-width: 160px;
+  width: 160px;
+  padding: 4px 0;
+  margin: 2px 0 0 0;
+  list-style: none;
+  background-color: #ffffff;
+  border-color: #ccc;
+  border-color: rgba(0, 0, 0, 0.2);
+  border-style: solid;
+  border-width: 1px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+  *border-right-width: 2px;
+  *border-bottom-width: 2px;
 }
 .ui-button {
 	display: inline-block;
@@ -533,6 +556,14 @@ button.ui-button::-moz-focus-inner {
 }
 .ui-draggable .ui-dialog-titlebar {
 	cursor: move;
+}
+.li_autocompletar{
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	font-family: arial;
+	display: block;
+	outline: none;
 }
 .ui-menu {
 	list-style: none;
@@ -884,8 +915,8 @@ body .ui-tooltip {
 .ui-widget-content .ui-state-focus,
 .ui-widget-header .ui-state-focus {
 	border: 1px solid #cccccc;
-	background: #ededed;
-	font-weight: normal;
+	background: #9fcce7;
+	font-weight: 13px;
 	color: #2b2b2b;
 }
 .ui-state-hover a,
